# InMemoryGraphDB

./: CMakeLists.txt  README.md
include/: graph.h
src/: graph.cpp  main.cpp
